deploy: f11ceab7837f838802a1f304bb9c1149db685497

--- a/tutorials/l_master.ipynb
+++ b/tutorials/l_master.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "1d4c3523",
+   "id": "d8acec83",
    "metadata": {},
    "source": [
     "# Custom Time Evolution\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9ccb6ca0",
+   "id": "d9b68bd2",
    "metadata": {},
    "source": [
     "*Note*: Please consult the tutorial on potentials first."
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b86b73b4",
+   "id": "c8eb7f62",
    "metadata": {},
    "source": [
     "*Note*: While a bit more complicated, this tutorial can help you make your simulations not only more versatile, but also increase their efficiency."
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6c4b4860",
+   "id": "f5c4c356",
    "metadata": {},
    "source": [
     "## Hamiltonian"
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ae191aae",
+   "id": "97339284",
    "metadata": {},
    "source": [
     "When calling the integration for the master equation, you can give an optional argument, `hamiltonian`. As already discussed, this argument represents a Hamiltonian as a dictionary of functions."
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "06965144",
+   "id": "c663df35",
    "metadata": {},
    "source": [
     "Up to now, we  wanted to use custom potentials, so we  added them to the dictionary. Let's look more closely at what is going on by considering a flake under plane wave illumination."
@@ -53,13 +53,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "5cb8a343",
+   "id": "5644f878",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-06-11T09:21:03.941437Z",
-     "iopub.status.busy": "2025-06-11T09:21:03.940923Z",
-     "iopub.status.idle": "2025-06-11T09:21:07.169350Z",
-     "shell.execute_reply": "2025-06-11T09:21:07.168786Z"
+     "iopub.execute_input": "2025-06-12T10:54:03.757458Z",
+     "iopub.status.busy": "2025-06-12T10:54:03.757242Z",
+     "iopub.status.idle": "2025-06-12T10:54:06.983466Z",
+     "shell.execute_reply": "2025-06-12T10:54:06.982917Z"
     }
    },
    "outputs": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7a4ab16a",
+   "id": "7a046dca",
    "metadata": {},
    "source": [
     "As discussed, the default Hamiltonian  has three terms:"
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e8a8a82f",
+   "id": "761d4910",
    "metadata": {},
    "source": [
     "1. a bare Hamiltonian.\n",
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "366da05d",
+   "id": "af818ce0",
    "metadata": {},
    "source": [
     "Each of these terms is represented by a function. Every function accepts the following three arguments:"
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ecb13f49",
+   "id": "2fb60e58",
    "metadata": {},
    "source": [
     "1. time\n",
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e8c10977",
+   "id": "ebf1ae10",
    "metadata": {},
    "source": [
     "Every function maps these arguments to a complex matrix. Before running a simulation, the functions in the dictionary get turned into a list `func_list`. "
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ae052c94",
+   "id": "1f968a86",
    "metadata": {},
    "source": [
     "The matrix representation of the Hamiltonian is then given by applying and adding these functions, like so `H[time] = sum( f(times[time], density_matrix[time], args) for f in func_list )`."
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7b04a7f2",
+   "id": "957c8e2a",
    "metadata": {},
    "source": [
     "## Argument Objects"
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e962ffdf",
+   "id": "de0ff119",
    "metadata": {},
    "source": [
     "The `args` object is a named tuple (like a struct in the C programming language) and we can inspect its contents by looking at its fields "
@@ -150,13 +150,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "0aea5b12",
+   "id": "a6156f9f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-06-11T09:21:07.171609Z",
-     "iopub.status.busy": "2025-06-11T09:21:07.171184Z",
-     "iopub.status.idle": "2025-06-11T09:21:09.391557Z",
-     "shell.execute_reply": "2025-06-11T09:21:09.390871Z"
+     "iopub.execute_input": "2025-06-12T10:54:06.986019Z",
+     "iopub.status.busy": "2025-06-12T10:54:06.985455Z",
+     "iopub.status.idle": "2025-06-12T10:54:09.077456Z",
+     "shell.execute_reply": "2025-06-12T10:54:09.076786Z"
     }
    },
    "outputs": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c3b59654",
+   "id": "36ba7ef3",
    "metadata": {},
    "source": [
     "We can access individual entries"
@@ -184,13 +184,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "779d20ae",
+   "id": "89c306e9",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-06-11T09:21:09.393642Z",
-     "iopub.status.busy": "2025-06-11T09:21:09.393192Z",
-     "iopub.status.idle": "2025-06-11T09:21:09.397005Z",
-     "shell.execute_reply": "2025-06-11T09:21:09.396304Z"
+     "iopub.execute_input": "2025-06-12T10:54:09.079579Z",
+     "iopub.status.busy": "2025-06-12T10:54:09.079365Z",
+     "iopub.status.idle": "2025-06-12T10:54:09.082821Z",
+     "shell.execute_reply": "2025-06-12T10:54:09.082231Z"
     }
    },
    "outputs": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5f854e48",
+   "id": "a9d31300",
    "metadata": {},
    "source": [
     "The `args` object is a lower-level representation of the OrbitalList object: a collection of numbers and arrays that represent the structure."
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c2247cd3",
+   "id": "2e475de9",
    "metadata": {},
    "source": [
     "The evolution is determined by the Hamiltonian. It is given by an addition of functions. Each of these functions depends on time, the density matrix and the simulated structure. So, a single function representing a term in the Hamiltonian has the following signature `term: time, density_matrix, args -> matrix`."
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cad2a267",
+   "id": "8bf4aa85",
    "metadata": {},
    "source": [
     "## Computing Terms"
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a80a3f8b",
+   "id": "b37552ff",
    "metadata": {},
    "source": [
     "Individual terms of the default Hamiltonian can be inspected and since these are functions, applied to arguments. First, consider the bare Hamiltonian"
@@ -241,13 +241,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "41b607bc",
+   "id": "001ab496",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-06-11T09:21:09.398999Z",
-     "iopub.status.busy": "2025-06-11T09:21:09.398622Z",
-     "iopub.status.idle": "2025-06-11T09:21:09.445830Z",
-     "shell.execute_reply": "2025-06-11T09:21:09.445293Z"
+     "iopub.execute_input": "2025-06-12T10:54:09.085050Z",
+     "iopub.status.busy": "2025-06-12T10:54:09.084548Z",
+     "iopub.status.idle": "2025-06-12T10:54:09.131966Z",
+     "shell.execute_reply": "2025-06-12T10:54:09.131334Z"
     }
    },
    "outputs": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b851846",
+   "id": "08c76733",
    "metadata": {},
    "source": [
     "The function returns the bare Hamiltonian, independent of the time and density matrix. Let's compute the Coulomb potential at the initial time"
@@ -280,13 +280,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "82d47d26",
+   "id": "50787d73",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-06-11T09:21:09.447805Z",
-     "iopub.status.busy": "2025-06-11T09:21:09.447437Z",
-     "iopub.status.idle": "2025-06-11T09:21:09.519789Z",
-     "shell.execute_reply": "2025-06-11T09:21:09.519249Z"
+     "iopub.execute_input": "2025-06-12T10:54:09.134012Z",
+     "iopub.status.busy": "2025-06-12T10:54:09.133666Z",
+     "iopub.status.idle": "2025-06-12T10:54:09.207095Z",
+     "shell.execute_reply": "2025-06-12T10:54:09.206442Z"
     }
    },
    "outputs": [
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "79ba4323",
+   "id": "8b601489",
    "metadata": {},
    "source": [
     "At the start of the simulation, there is no induced Coulomb potential (all entries in the matrix are zero), because the system is in its ground state."
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "452af969",
+   "id": "fb2373b0",
    "metadata": {},
    "source": [
     "Last, there is the external potential. Since no transition dipole moments are considered, it will be entirely diagonal in site basis"
@@ -326,13 +326,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "df5b6080",
+   "id": "3b0e9fe4",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-06-11T09:21:09.521767Z",
-     "iopub.status.busy": "2025-06-11T09:21:09.521559Z",
-     "iopub.status.idle": "2025-06-11T09:21:09.553078Z",
-     "shell.execute_reply": "2025-06-11T09:21:09.552484Z"
+     "iopub.execute_input": "2025-06-12T10:54:09.209276Z",
+     "iopub.status.busy": "2025-06-12T10:54:09.208902Z",
+     "iopub.status.idle": "2025-06-12T10:54:09.238832Z",
+     "shell.execute_reply": "2025-06-12T10:54:09.238312Z"
     }
    },
    "outputs": [
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bb081ea3",
+   "id": "53317661",
    "metadata": {},
    "source": [
     "## Modelling Terms"
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "27bd7c58",
+   "id": "5aaa4146",
    "metadata": {},
    "source": [
     "To include arbitrary terms in the time evolution, we define a function that"
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "090f94ac",
+   "id": "397bac31",
    "metadata": {},
    "source": [
     "1. Accepts `time, density_matrix, args`\n",
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4aeb5022",
+   "id": "59e47066",
    "metadata": {},
    "source": [
     "Then, we insert it in the dictionary, potentially overwriting a default key."
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6b90306f",
+   "id": "4b12a4d5",
    "metadata": {},
    "source": [
     "Let's illustrate this at the example of a custom scalar potential. We want to replace the dipole-gauge coupling $\\vec{E} \\vec{P}$ with a scalar potential representing a plane-wave pulse. Let's define this potential first"
@@ -398,13 +398,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "3d6fa5d3",
+   "id": "a0b75989",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-06-11T09:21:09.555129Z",
-     "iopub.status.busy": "2025-06-11T09:21:09.554770Z",
-     "iopub.status.idle": "2025-06-11T09:21:09.559505Z",
-     "shell.execute_reply": "2025-06-11T09:21:09.558890Z"
+     "iopub.execute_input": "2025-06-12T10:54:09.240813Z",
+     "iopub.status.busy": "2025-06-12T10:54:09.240623Z",
+     "iopub.status.idle": "2025-06-12T10:54:09.245048Z",
+     "shell.execute_reply": "2025-06-12T10:54:09.244402Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6f308c51",
+   "id": "bcd25784",
    "metadata": {},
    "source": [
     "Now, we replace the default potential with our custom term,  as we did before in the case of the pulsed dipole."
@@ -432,13 +432,13 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "0239d801",
+   "id": "b0795368",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-06-11T09:21:09.561735Z",
-     "iopub.status.busy": "2025-06-11T09:21:09.561446Z",
-     "iopub.status.idle": "2025-06-11T09:21:09.564613Z",
-     "shell.execute_reply": "2025-06-11T09:21:09.563988Z"
+     "iopub.execute_input": "2025-06-12T10:54:09.246936Z",
+     "iopub.status.busy": "2025-06-12T10:54:09.246726Z",
+     "iopub.status.idle": "2025-06-12T10:54:09.249738Z",
+     "shell.execute_reply": "2025-06-12T10:54:09.249108Z"
     }
    },
    "outputs": [],
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "23b2f79c",
+   "id": "61420928",
    "metadata": {},
    "source": [
     "To run a time-domain simulation, we  pass the modified Hamiltonian dictionary directly, as demonstrated in the first section"
@@ -457,13 +457,13 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "b4bb66e2",
+   "id": "dfa941b1",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-06-11T09:21:09.566369Z",
-     "iopub.status.busy": "2025-06-11T09:21:09.566188Z",
-     "iopub.status.idle": "2025-06-11T09:21:12.207981Z",
-     "shell.execute_reply": "2025-06-11T09:21:12.207394Z"
+     "iopub.execute_input": "2025-06-12T10:54:09.251526Z",
+     "iopub.status.busy": "2025-06-12T10:54:09.251173Z",
+     "iopub.status.idle": "2025-06-12T10:54:11.903648Z",
+     "shell.execute_reply": "2025-06-12T10:54:11.903035Z"
     }
    },
    "outputs": [
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7a4fff08",
+   "id": "54130634",
    "metadata": {},
    "source": [
     "## Modelling Dissipators"
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4d28f0f7",
+   "id": "221dbd9e",
    "metadata": {},
    "source": [
     "Dissipators are modelled as functions with the same signature as terms in the Hamiltonian, i.e. to model a custom dissipator"
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ce73f852",
+   "id": "cd80cd95",
    "metadata": {},
    "source": [
     "1. Define a function `diss : time, density_matrix, args -> jax.Array`\n",
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d463ab0c",
+   "id": "0e590147",
    "metadata": {},
    "source": [
     "You can also get defaults"
@@ -542,13 +542,13 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "47d7605c",
+   "id": "46a032ea",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-06-11T09:21:12.209836Z",
-     "iopub.status.busy": "2025-06-11T09:21:12.209641Z",
-     "iopub.status.idle": "2025-06-11T09:21:12.213633Z",
-     "shell.execute_reply": "2025-06-11T09:21:12.213002Z"
+     "iopub.execute_input": "2025-06-12T10:54:11.905576Z",
+     "iopub.status.busy": "2025-06-12T10:54:11.905373Z",
+     "iopub.status.idle": "2025-06-12T10:54:11.909333Z",
+     "shell.execute_reply": "2025-06-12T10:54:11.908694Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -558,7 +558,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7f335aef0c20>}\n"
+      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7f65a4ec8c20>}\n"
      ]
     }
    ],
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "502d89b5",
+   "id": "67ddfa4c",
    "metadata": {},
    "source": [
     "NOTE: To pass the dissipator above to the `master_equation` method, you have to specify the relaxation rate again. "
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ee8a5a2a",
+   "id": "6c2eb8f3",
    "metadata": {},
    "source": [
     "## Postprocessing"
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "48f9fcf5",
+   "id": "9a4cb098",
    "metadata": {},
    "source": [
     "You can define custom postprocessing. These are functions with the signature `postprocess : density_matrix_batch, args -> array`. The `density_matrix_batch` is an array of shape `TxNxN`, where `T` encodes time."
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "506c5903",
+   "id": "bbd6fd0c",
    "metadata": {},
    "source": [
     "For example, if you are only interested in the occupation of the 0-th state"
@@ -602,13 +602,13 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "f774aa5b",
+   "id": "818fdc22",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-06-11T09:21:12.215622Z",
-     "iopub.status.busy": "2025-06-11T09:21:12.215308Z",
-     "iopub.status.idle": "2025-06-11T09:21:12.218313Z",
-     "shell.execute_reply": "2025-06-11T09:21:12.217710Z"
+     "iopub.execute_input": "2025-06-12T10:54:11.911443Z",
+     "iopub.status.busy": "2025-06-12T10:54:11.911081Z",
+     "iopub.status.idle": "2025-06-12T10:54:11.914262Z",
+     "shell.execute_reply": "2025-06-12T10:54:11.913665Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -622,13 +622,13 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "857c45e2",
+   "id": "3f5ca0b9",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-06-11T09:21:12.220115Z",
-     "iopub.status.busy": "2025-06-11T09:21:12.219779Z",
-     "iopub.status.idle": "2025-06-11T09:21:13.298594Z",
-     "shell.execute_reply": "2025-06-11T09:21:13.298052Z"
+     "iopub.execute_input": "2025-06-12T10:54:11.916037Z",
+     "iopub.status.busy": "2025-06-12T10:54:11.915688Z",
+     "iopub.status.idle": "2025-06-12T10:54:13.015978Z",
+     "shell.execute_reply": "2025-06-12T10:54:13.015377Z"
     }
    },
    "outputs": [
