deploy: 3addd22caec83ecdc49f4623653b024d112c86c8

--- a/tutorials/l_master.ipynb
+++ b/tutorials/l_master.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "d8acec83",
+   "id": "256d4901",
    "metadata": {},
    "source": [
     "# Custom Time Evolution\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d9b68bd2",
+   "id": "708a4384",
    "metadata": {},
    "source": [
     "*Note*: Please consult the tutorial on potentials first."
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c8eb7f62",
+   "id": "ca8e035f",
    "metadata": {},
    "source": [
     "*Note*: While a bit more complicated, this tutorial can help you make your simulations not only more versatile, but also increase their efficiency."
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f5c4c356",
+   "id": "58844561",
    "metadata": {},
    "source": [
     "## Hamiltonian"
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "97339284",
+   "id": "98d3bb93",
    "metadata": {},
    "source": [
     "When calling the integration for the master equation, you can give an optional argument, `hamiltonian`. As already discussed, this argument represents a Hamiltonian as a dictionary of functions."
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c663df35",
+   "id": "22ff39a4",
    "metadata": {},
    "source": [
     "Up to now, we  wanted to use custom potentials, so we  added them to the dictionary. Let's look more closely at what is going on by considering a flake under plane wave illumination."
@@ -53,13 +53,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "5644f878",
+   "id": "38a0daec",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-06-12T10:54:03.757458Z",
-     "iopub.status.busy": "2025-06-12T10:54:03.757242Z",
-     "iopub.status.idle": "2025-06-12T10:54:06.983466Z",
-     "shell.execute_reply": "2025-06-12T10:54:06.982917Z"
+     "iopub.execute_input": "2025-06-24T14:53:25.336402Z",
+     "iopub.status.busy": "2025-06-24T14:53:25.336218Z",
+     "iopub.status.idle": "2025-06-24T14:53:28.713034Z",
+     "shell.execute_reply": "2025-06-24T14:53:28.712375Z"
     }
    },
    "outputs": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7a046dca",
+   "id": "37b3dd18",
    "metadata": {},
    "source": [
     "As discussed, the default Hamiltonian  has three terms:"
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "761d4910",
+   "id": "16be7f5c",
    "metadata": {},
    "source": [
     "1. a bare Hamiltonian.\n",
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "af818ce0",
+   "id": "018c4e64",
    "metadata": {},
    "source": [
     "Each of these terms is represented by a function. Every function accepts the following three arguments:"
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2fb60e58",
+   "id": "2721a5f7",
    "metadata": {},
    "source": [
     "1. time\n",
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ebf1ae10",
+   "id": "6fe53239",
    "metadata": {},
    "source": [
     "Every function maps these arguments to a complex matrix. Before running a simulation, the functions in the dictionary get turned into a list `func_list`. "
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1f968a86",
+   "id": "2758c691",
    "metadata": {},
    "source": [
     "The matrix representation of the Hamiltonian is then given by applying and adding these functions, like so `H[time] = sum( f(times[time], density_matrix[time], args) for f in func_list )`."
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "957c8e2a",
+   "id": "f475b4f5",
    "metadata": {},
    "source": [
     "## Argument Objects"
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "de0ff119",
+   "id": "e52aad99",
    "metadata": {},
    "source": [
     "The `args` object is a named tuple (like a struct in the C programming language) and we can inspect its contents by looking at its fields "
@@ -150,13 +150,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "a6156f9f",
+   "id": "77434566",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-06-12T10:54:06.986019Z",
-     "iopub.status.busy": "2025-06-12T10:54:06.985455Z",
-     "iopub.status.idle": "2025-06-12T10:54:09.077456Z",
-     "shell.execute_reply": "2025-06-12T10:54:09.076786Z"
+     "iopub.execute_input": "2025-06-24T14:53:28.715596Z",
+     "iopub.status.busy": "2025-06-24T14:53:28.715118Z",
+     "iopub.status.idle": "2025-06-24T14:53:31.030171Z",
+     "shell.execute_reply": "2025-06-24T14:53:31.029582Z"
     }
    },
    "outputs": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "36ba7ef3",
+   "id": "642382b3",
    "metadata": {},
    "source": [
     "We can access individual entries"
@@ -184,13 +184,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "89c306e9",
+   "id": "33f531d7",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-06-12T10:54:09.079579Z",
-     "iopub.status.busy": "2025-06-12T10:54:09.079365Z",
-     "iopub.status.idle": "2025-06-12T10:54:09.082821Z",
-     "shell.execute_reply": "2025-06-12T10:54:09.082231Z"
+     "iopub.execute_input": "2025-06-24T14:53:31.032285Z",
+     "iopub.status.busy": "2025-06-24T14:53:31.032037Z",
+     "iopub.status.idle": "2025-06-24T14:53:31.036257Z",
+     "shell.execute_reply": "2025-06-24T14:53:31.035504Z"
     }
    },
    "outputs": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a9d31300",
+   "id": "ba5fc52d",
    "metadata": {},
    "source": [
     "The `args` object is a lower-level representation of the OrbitalList object: a collection of numbers and arrays that represent the structure."
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2e475de9",
+   "id": "c755d26e",
    "metadata": {},
    "source": [
     "The evolution is determined by the Hamiltonian. It is given by an addition of functions. Each of these functions depends on time, the density matrix and the simulated structure. So, a single function representing a term in the Hamiltonian has the following signature `term: time, density_matrix, args -> matrix`."
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8bf4aa85",
+   "id": "95a0c69a",
    "metadata": {},
    "source": [
     "## Computing Terms"
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b37552ff",
+   "id": "dc7e106b",
    "metadata": {},
    "source": [
     "Individual terms of the default Hamiltonian can be inspected and since these are functions, applied to arguments. First, consider the bare Hamiltonian"
@@ -241,13 +241,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "001ab496",
+   "id": "35149626",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-06-12T10:54:09.085050Z",
-     "iopub.status.busy": "2025-06-12T10:54:09.084548Z",
-     "iopub.status.idle": "2025-06-12T10:54:09.131966Z",
-     "shell.execute_reply": "2025-06-12T10:54:09.131334Z"
+     "iopub.execute_input": "2025-06-24T14:53:31.038140Z",
+     "iopub.status.busy": "2025-06-24T14:53:31.037957Z",
+     "iopub.status.idle": "2025-06-24T14:53:31.086939Z",
+     "shell.execute_reply": "2025-06-24T14:53:31.086336Z"
     }
    },
    "outputs": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "08c76733",
+   "id": "1142ff95",
    "metadata": {},
    "source": [
     "The function returns the bare Hamiltonian, independent of the time and density matrix. Let's compute the Coulomb potential at the initial time"
@@ -280,13 +280,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "50787d73",
+   "id": "47052543",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-06-12T10:54:09.134012Z",
-     "iopub.status.busy": "2025-06-12T10:54:09.133666Z",
-     "iopub.status.idle": "2025-06-12T10:54:09.207095Z",
-     "shell.execute_reply": "2025-06-12T10:54:09.206442Z"
+     "iopub.execute_input": "2025-06-24T14:53:31.089002Z",
+     "iopub.status.busy": "2025-06-24T14:53:31.088641Z",
+     "iopub.status.idle": "2025-06-24T14:53:31.165506Z",
+     "shell.execute_reply": "2025-06-24T14:53:31.164950Z"
     }
    },
    "outputs": [
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8b601489",
+   "id": "a61e4687",
    "metadata": {},
    "source": [
     "At the start of the simulation, there is no induced Coulomb potential (all entries in the matrix are zero), because the system is in its ground state."
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fb2373b0",
+   "id": "9fdd7294",
    "metadata": {},
    "source": [
     "Last, there is the external potential. Since no transition dipole moments are considered, it will be entirely diagonal in site basis"
@@ -326,13 +326,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "3b0e9fe4",
+   "id": "b4ca7cc0",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-06-12T10:54:09.209276Z",
-     "iopub.status.busy": "2025-06-12T10:54:09.208902Z",
-     "iopub.status.idle": "2025-06-12T10:54:09.238832Z",
-     "shell.execute_reply": "2025-06-12T10:54:09.238312Z"
+     "iopub.execute_input": "2025-06-24T14:53:31.167523Z",
+     "iopub.status.busy": "2025-06-24T14:53:31.167209Z",
+     "iopub.status.idle": "2025-06-24T14:53:31.197737Z",
+     "shell.execute_reply": "2025-06-24T14:53:31.197082Z"
     }
    },
    "outputs": [
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "53317661",
+   "id": "551fa022",
    "metadata": {},
    "source": [
     "## Modelling Terms"
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5aaa4146",
+   "id": "3bee1ac5",
    "metadata": {},
    "source": [
     "To include arbitrary terms in the time evolution, we define a function that"
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "397bac31",
+   "id": "d1cd005c",
    "metadata": {},
    "source": [
     "1. Accepts `time, density_matrix, args`\n",
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "59e47066",
+   "id": "ea300ad7",
    "metadata": {},
    "source": [
     "Then, we insert it in the dictionary, potentially overwriting a default key."
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4b12a4d5",
+   "id": "b73cdebf",
    "metadata": {},
    "source": [
     "Let's illustrate this at the example of a custom scalar potential. We want to replace the dipole-gauge coupling $\\vec{E} \\vec{P}$ with a scalar potential representing a plane-wave pulse. Let's define this potential first"
@@ -398,13 +398,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "a0b75989",
+   "id": "44c16939",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-06-12T10:54:09.240813Z",
-     "iopub.status.busy": "2025-06-12T10:54:09.240623Z",
-     "iopub.status.idle": "2025-06-12T10:54:09.245048Z",
-     "shell.execute_reply": "2025-06-12T10:54:09.244402Z"
+     "iopub.execute_input": "2025-06-24T14:53:31.199953Z",
+     "iopub.status.busy": "2025-06-24T14:53:31.199501Z",
+     "iopub.status.idle": "2025-06-24T14:53:31.203991Z",
+     "shell.execute_reply": "2025-06-24T14:53:31.203385Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bcd25784",
+   "id": "de03e847",
    "metadata": {},
    "source": [
     "Now, we replace the default potential with our custom term,  as we did before in the case of the pulsed dipole."
@@ -432,13 +432,13 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "b0795368",
+   "id": "c2aae2cf",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-06-12T10:54:09.246936Z",
-     "iopub.status.busy": "2025-06-12T10:54:09.246726Z",
-     "iopub.status.idle": "2025-06-12T10:54:09.249738Z",
-     "shell.execute_reply": "2025-06-12T10:54:09.249108Z"
+     "iopub.execute_input": "2025-06-24T14:53:31.206058Z",
+     "iopub.status.busy": "2025-06-24T14:53:31.205722Z",
+     "iopub.status.idle": "2025-06-24T14:53:31.208853Z",
+     "shell.execute_reply": "2025-06-24T14:53:31.208228Z"
     }
    },
    "outputs": [],
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "61420928",
+   "id": "b286be6f",
    "metadata": {},
    "source": [
     "To run a time-domain simulation, we  pass the modified Hamiltonian dictionary directly, as demonstrated in the first section"
@@ -457,13 +457,13 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "dfa941b1",
+   "id": "74b79d37",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-06-12T10:54:09.251526Z",
-     "iopub.status.busy": "2025-06-12T10:54:09.251173Z",
-     "iopub.status.idle": "2025-06-12T10:54:11.903648Z",
-     "shell.execute_reply": "2025-06-12T10:54:11.903035Z"
+     "iopub.execute_input": "2025-06-24T14:53:31.210657Z",
+     "iopub.status.busy": "2025-06-24T14:53:31.210480Z",
+     "iopub.status.idle": "2025-06-24T14:53:33.920305Z",
+     "shell.execute_reply": "2025-06-24T14:53:33.919640Z"
     }
    },
    "outputs": [
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "54130634",
+   "id": "48fed546",
    "metadata": {},
    "source": [
     "## Modelling Dissipators"
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "221dbd9e",
+   "id": "56f9c76c",
    "metadata": {},
    "source": [
     "Dissipators are modelled as functions with the same signature as terms in the Hamiltonian, i.e. to model a custom dissipator"
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cd80cd95",
+   "id": "38eceab3",
    "metadata": {},
    "source": [
     "1. Define a function `diss : time, density_matrix, args -> jax.Array`\n",
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0e590147",
+   "id": "2b4c0cfb",
    "metadata": {},
    "source": [
     "You can also get defaults"
@@ -542,13 +542,13 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "46a032ea",
+   "id": "9153eea2",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-06-12T10:54:11.905576Z",
-     "iopub.status.busy": "2025-06-12T10:54:11.905373Z",
-     "iopub.status.idle": "2025-06-12T10:54:11.909333Z",
-     "shell.execute_reply": "2025-06-12T10:54:11.908694Z"
+     "iopub.execute_input": "2025-06-24T14:53:33.922473Z",
+     "iopub.status.busy": "2025-06-24T14:53:33.922245Z",
+     "iopub.status.idle": "2025-06-24T14:53:33.926310Z",
+     "shell.execute_reply": "2025-06-24T14:53:33.925692Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -558,7 +558,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7f65a4ec8c20>}\n"
+      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7f4d9f5f2840>}\n"
      ]
     }
    ],
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "67ddfa4c",
+   "id": "9adaa80d",
    "metadata": {},
    "source": [
     "NOTE: To pass the dissipator above to the `master_equation` method, you have to specify the relaxation rate again. "
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6c2eb8f3",
+   "id": "75c01e30",
    "metadata": {},
    "source": [
     "## Postprocessing"
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9a4cb098",
+   "id": "8f492f1e",
    "metadata": {},
    "source": [
     "You can define custom postprocessing. These are functions with the signature `postprocess : density_matrix_batch, args -> array`. The `density_matrix_batch` is an array of shape `TxNxN`, where `T` encodes time."
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bbd6fd0c",
+   "id": "9f9a2f64",
    "metadata": {},
    "source": [
     "For example, if you are only interested in the occupation of the 0-th state"
@@ -602,13 +602,13 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "818fdc22",
+   "id": "db021fed",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-06-12T10:54:11.911443Z",
-     "iopub.status.busy": "2025-06-12T10:54:11.911081Z",
-     "iopub.status.idle": "2025-06-12T10:54:11.914262Z",
-     "shell.execute_reply": "2025-06-12T10:54:11.913665Z"
+     "iopub.execute_input": "2025-06-24T14:53:33.928373Z",
+     "iopub.status.busy": "2025-06-24T14:53:33.928145Z",
+     "iopub.status.idle": "2025-06-24T14:53:33.931481Z",
+     "shell.execute_reply": "2025-06-24T14:53:33.930845Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -622,13 +622,13 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "3f5ca0b9",
+   "id": "ca18f525",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-06-12T10:54:11.916037Z",
-     "iopub.status.busy": "2025-06-12T10:54:11.915688Z",
-     "iopub.status.idle": "2025-06-12T10:54:13.015978Z",
-     "shell.execute_reply": "2025-06-12T10:54:13.015377Z"
+     "iopub.execute_input": "2025-06-24T14:53:33.933420Z",
+     "iopub.status.busy": "2025-06-24T14:53:33.933066Z",
+     "iopub.status.idle": "2025-06-24T14:53:35.041050Z",
+     "shell.execute_reply": "2025-06-24T14:53:35.040413Z"
     }
    },
    "outputs": [
